// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> <Alert.error /> renders correctly 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  background-color: #FCEBCD;
}

<Cleaned
  bg="ui.errorBackground"
  className="c0"
  mb={3}
>
  <Container
    maxWidth="default"
    px={3}
  >
    <Box
      py={4}
    >
      <Box
        pl={1}
        pr={3}
      >
        <Icon
          color="ui.error"
          name="warning"
        />
      </Box>
      <Text
        mb={0}
        textAlign="left"
        textStyle="text"
      >
        Hello world
      </Text>
    </Box>
  </Container>
</Cleaned>
`;

exports[`<Alert /> <Alert.info /> renders correctly 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  background-color: #E7F7F7;
}

<Cleaned
  bg="ui.infoBackground"
  className="c0"
  mb={3}
>
  <Container
    maxWidth="default"
    px={3}
  >
    <Box
      py={4}
    >
      <Box
        pl={1}
        pr={3}
      >
        <Icon
          color="ui.info"
          name="info"
        />
      </Box>
      <Text
        mb={0}
        textAlign="left"
        textStyle="text"
      >
        Hello world
      </Text>
    </Box>
  </Container>
</Cleaned>
`;

exports[`<Alert /> <Alert.success /> renders correctly 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  background-color: #DEF2DE;
}

<Cleaned
  bg="ui.successBackground"
  className="c0"
  mb={3}
>
  <Container
    maxWidth="default"
    px={3}
  >
    <Box
      py={4}
    >
      <Box
        pl={1}
        pr={3}
      >
        <Icon
          color="ui.success"
          name="checkCircle"
        />
      </Box>
      <Text
        mb={0}
        textAlign="left"
        textStyle="text"
      >
        Hello world
      </Text>
    </Box>
  </Container>
</Cleaned>
`;

exports[`<Alert /> renders correctly 1`] = `
.c0 {
  margin-bottom: 0.75rem;
  background-color: #F4F5F6;
}

<Cleaned
  bg="grey.3"
  className="c0"
  mb={3}
>
  <Container
    maxWidth="default"
    px={3}
  >
    <Box
      py={4}
    >
      <Text
        mb={0}
        textAlign="left"
        textStyle="text"
      >
        Hello world
      </Text>
    </Box>
  </Container>
</Cleaned>
`;
